force-app/main/default/objects/BL_Competition__c/BL_Competition__c.object-meta.xml
<CustomObject>
    <label>Competition</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>