force-app/main/default/objects/BL_Competition__c/fields/Date_League_Finished__c.field-meta.xml
<CustomField>
    <fullName>Date_League_Finished__c</fullName>
    <description>Date/time of when the league status changed to finished</description>
    <label>Date League Finished</label>
    <type>DateTime</type>
</CustomField>