force-app/main/default/objects/BL_Competition__c/fields/isPrivate__c.field-meta.xml
<CustomField>
    <fullName>isPrivate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Private League</label>
    <type>Checkbox</type>
</CustomField>