force-app/main/default/objects/BL_Competition__c/fields/Match_No__c.field-meta.xml
<CustomField>
    <fullName>Match_No__c</fullName>
    <label>Match No</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>