force-app/main/default/objects/BL_Competition__c/fields/Matches_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Matches_Scheduled__c</fullName>
    <label>Matches Scheduled</label>
    <summaryForeignKey>BL_Match__c.Competition__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>