force-app/main/default/objects/BL_Competition__c/fields/Max_Teams__c.field-meta.xml
<CustomField>
    <fullName>Max_Teams__c</fullName>
    <description>0 = unlimited</description>
    <label>Max Teams</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>