force-app/main/default/objects/BL_Competition__c/fields/Teams__c.field-meta.xml
<CustomField>
    <fullName>Teams__c</fullName>
    <description>Displays &quot;Teams Joined&quot; / &quot;Max Teams&quot; i.e. &quot;4/8&quot;</description>
    <formula>TEXT(Teams_Joined__c) &amp; &quot;/&quot; &amp; TEXT(Max_Teams__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays &quot;Teams Joined&quot; / &quot;Max Teams&quot; i.e. &quot;4/8&quot;</inlineHelpText>
    <label>Teams</label>
    <type>Text</type>
</CustomField>