force-app/main/default/objects/BL_Competition__c/fields/Teams_Joined__c.field-meta.xml
<CustomField>
    <fullName>Teams_Joined__c</fullName>
    <label>Teams Joined</label>
    <summaryForeignKey>BL_Competitor__c.Competition__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>