force-app/main/default/objects/BL_Competition__c/fields/TeamSize__c.field-meta.xml
<CustomField>
    <fullName>TeamSize__c</fullName>
    <label>Team Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Player</fullName>
            </value>
            <value>
                <fullName>Two Players</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>