force-app/main/default/objects/BL_Competition__c/fields/Total_Matches_Played__c.field-meta.xml
<CustomField>
    <fullName>Total_Matches_Played__c</fullName>
    <label>Total Matches Played</label>
    <summaryFilterItems>
        <field>BL_Match__c.isResolved__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>BL_Match__c.Competition__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>