force-app/main/default/objects/BL_Competition__c/recordTypes/League.recordType-meta.xml
<RecordType>
    <fullName>League</fullName>
    <active>true</active>
    <description>Classic round-robin tournament</description>
    <label>League</label>
</RecordType>