force-app/main/default/objects/BL_Competition__c/listViews/FJA.listView-meta.xml
<ListView>
    <fullName>FJA</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>TeamSize__c</columns>
    <columns>Teams__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>FJA</value>
    </filters>
    <label>FJA</label>
</ListView>