force-app/main/default/objects/BL_Competition__c/listViews/Started.listView-meta.xml
<ListView>
    <fullName>Started</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>TeamSize__c</columns>
    <columns>Teams__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Started</value>
    </filters>
    <label>Started</label>
</ListView>